--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">PocketGuide</string>
     <string name="main_open_button">START ADVENTURE</string>
-    <string name="destination">Destination</string>
-    <string name="destinationone">Paris</string>
-    <string name="destinationtwo">Lyon</string>
-    <string name="destinationthree">Marseille</string>
-    <string name="destinationfour">Toulouse</string>
+    <string name="destination">DESTINATIONS</string>
+    <string name="destinationone">PARIS</string>
+    <string name="destinationtwo">LYON</string>
+    <string name="destinationthree">MARSEILLE</string>
+    <string name="destinationfour">NANTES</string>
+    <string name="destinationfive">TOULOUSE</string>
+    <string name="destinationsix">STRASBOURG</string>
     <string name="image">IMAGE</string>
-    <string name="paris" />
-    <string name="imagebutton">IMAGEBUTTON</string>
 </resources>
